--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,110 +1,33 @@
-.page-header {
-  border-bottom: 1px solid #ececec;
-}
-
 .header {
-  display: flex;
-  align-items: center;
-  border-bottom: solid 1px var(--BorderColor);
-}
+  border-bottom: 1px solid $header-border-color;
 
-.header__logo {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  color: var(--hover-focus);
-  padding: 24px 0 24px;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-  margin: 0;
-  &--recolor {
-    color: var(--black);
+  &__container {
+    @include set-flex(row, flex-start);
+    align-content: center;
+    padding: 24px 0 25px;
+    gap: 93px;
+    width: 1200px;
+    margin: 0 auto;
   }
-}
 
-.header__list-nav {
-  display: flex;
-  margin: 0;
-  gap: 46px;
-  list-style: none;
-  padding: 32px 0 31px 93px;
-  &--a {
-    position: relative;
-    color: var(--black);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__contact {
+    @include set-flex(row);
+    column-gap: 50px;
+    margin-left: auto;
+
+    & .icon {
+      margin-right: 10px;
+    }
   }
-  &--a:focus,
-  &--a:hover {
-    color: var(--hover-focus);
+
+  &__link {
+    @include set-flex(row, flex-start, stretch);
   }
-  &--a:hover,
-  &--a:focus {
-    fill: var(--hover-focus);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &__nav {
+    @include set-flex(row, flex-start, stretch);
+    @include font-atr(500, 1.14, 0.02em);
+    color: $bolded-text-color;
+    column-gap: 46px;
   }
-}
-
-.header__list-menu {
-  position: relative;
-}
-
-.header__link::after {
-  position: absolute;
-  content: "";
-  background: var(--hover-focus);
-  border-radius: 2px;
-  border: 1px solid;
-  height: 4px;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  transform: translateY(32px);
-}
-
-.header__contacts {
-  display: flex;
-  gap: 30px;
-  margin-left: 345px;
-  align-items: center;
-  justify-content: center;
-  list-style: none;
-}
-
-.header__mail {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  fill: var(--grey);
-  color: var(--grey);
-  &:hover,
-  &:focus {
-    color: var(--hover-focus);
-    fill: var(--hover-focus);
-    transition: 0.2s;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-.header__phone {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  fill: var(--grey);
-  color: var(--grey);
-  &:hover,
-  &:focus {
-    color: var(--hover-focus);
-    fill: var(--hover-focus);
-    transition: 0.2s;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-.header__icon {
-  margin-right: 5px;
 }
