--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -1,16 +1,17 @@
 .section-top {
   width: 100%;
+  background-image: url(../images/img.bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 1600px;
+  margin: 0 auto;
 
   &__layout {
     @include set-flex(column);
     padding: 200px 0 200px;
     background-color: $section-top-background;
-    background-image: url(../images/img.bg.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    max-width: 1600px;
-    margin: 0 auto;
+
   }
 
   &__header {
