--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -1,26 +1,53 @@
 .section-top {
-  width: 100%;
-  background-image: url(../images/img.bg.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 1600px;
-  margin: 0 auto;
+  min-width: 320px;
+  background-color: $section-background-color;
 
   &__layout {
     @include set-flex(column);
-    padding: 200px 0 200px;
+    padding: 118px 0 118px;
     background-color: $section-top-background;
-
+    background-image: url(../images/background.jpg);
+    background-blend-mode: darken;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    width: 100%;
   }
 
   &__header {
     @include font-atr(900, 1.36, 0.06em);
-    font-size: get-size('top-section');
+    font-size: get-size('mobile-top-section');
     text-align: center;
     text-transform: uppercase;
     color: $button-text-color;
-    margin: 0 0 40px;
+    margin: 0;
     display: block;
+
+    &--margin {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (min-device-pixel-ratio: 2),
+(-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+  .section-top__layout {
+    background-image: url(../images/background@2x.jpg);
+  }
+}
+
+@media (min-width: 1200px) {
+  .section-top__layout {
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 200px 0;
+  }
+
+  .section-top__header {
+    @include font-atr(900, 1.36, 0.06em);
+    font-size: get-size('top-section');
   }
 }
