--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -1,16 +1,17 @@
 .section-top {
   width: 100%;
-  background-image: url(../images/img.bg.jpg);
+  background-image: url(../images/background.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   margin: 0 auto;
+  min-width: 1600px;
 
   &__layout {
     @include set-flex(column);
     padding: 200px 0 200px;
     background-color: $section-top-background;
-    width: 1600px;
+
 
   }
 
